src/objects/AcctSeed__Cost_Rates__c.object
<CustomObject>
    <description>The labor cost associated with an employee or resource.</description>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up to salesforce user</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cost_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Hourly_Cost__c</fullName>
        <inlineHelpText>Used for hourly job costing or standard costing. Rates can include overhead or benefits burden if desired. Cost is not capped. Number of units times hourly cost will be what is recorded in the transaction.</inlineHelpText>
        <label>Hourly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Overtime_Hourly_Cost__c</fullName>
        <label>Overtime Hourly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes a specific Project Task this cost rate is used for.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>AcctSeed__Project_Task__c.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Labor Cost Rates</relationshipLabel>
        <relationshipName>Cost_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes a specific Project this cost rate is used for.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Labor Cost Rates</relationshipLabel>
        <relationshipName>Cost_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Weekly_Salary_Cost__c</fullName>
        <inlineHelpText>Used for actual job costing of salaried employees. Cost is capped and is derived by taking the weekly salaried amount divided by the number of hours an employee works.</inlineHelpText>
        <label>Weekly Salary Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Labor Cost Rate</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Hourly_Cost__c</columns>
        <columns>AcctSeed__Weekly_Salary_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Employee_Default</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Hourly_Cost__c</columns>
        <columns>AcctSeed__Overtime_Hourly_Cost__c</columns>
        <columns>AcctSeed__Weekly_Salary_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Project__c</field>
            <operation>equals</operation>
        </filters>
        <label>Employee Default</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Project_Default</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Hourly_Cost__c</columns>
        <columns>AcctSeed__Overtime_Hourly_Cost__c</columns>
        <columns>AcctSeed__Weekly_Salary_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Project__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>AcctSeed__Project_Task__c</field>
            <operation>equals</operation>
        </filters>
        <label>Project Default</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Project_Task_Default</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Hourly_Cost__c</columns>
        <columns>AcctSeed__Overtime_Hourly_Cost__c</columns>
        <columns>AcctSeed__Weekly_Salary_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Project_Task__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Project Task Default</label>
    </listViews>
    <nameField>
        <displayFormat>CRT-{00000}</displayFormat>
        <label>Cost Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labor Cost Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Not_Both_Hourly_Or_Weekly_Salary</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL(AcctSeed__Hourly_Cost__c)) &amp;&amp; NOT(ISNULL(AcctSeed__Weekly_Salary_Cost__c))</errorConditionFormula>
        <errorMessage>You can only enter an Hourly Cost or a Weekly Salary Cost but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Hourly_Or_Weekly_Salary</fullName>
        <active>true</active>
        <description>Require either hourly or weekly salary field is populated.</description>
        <errorConditionFormula>ISNULL(AcctSeed__Weekly_Salary_Cost__c) &amp;&amp; ISNULL(AcctSeed__Hourly_Cost__c)</errorConditionFormula>
        <errorMessage>You must enter either an Hourly Cost or a Weekly Salary Cost value.</errorMessage>
    </validationRules>
</CustomObject>